apply plugin: 'java'

group 'com.ata'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11
targetCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies{
    compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.2.0'
}